# OpenGL-With-Magnum-Engine

./: CMakeCache.txt  Makefile  MyApplication.cbp  cmake_install.cmake
modules/: FindMagnumIntegration.cmake
src/: CMakeLists.txt  Makefile  MyApplication  MyApplication.cpp  TexturedTriangleShader.cpp  TexturedTriangleShader.h  cmake_install.cmake  imgui.ini  resource_TexturedTriangle_RESOURCES.cpp
